tests/calico_testcases/example_policies/testcase24-selector-expression/testcase24-c.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: testcase24-c
  namespace: kube-system
spec:
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    source:
      selector: "!all() || !((!has(app) || has(tier)) && !has(k8s-app))"
      namespaceSelector:  all()
  egress:
  - action: Allow
    destination:
      namespaceSelector: "!( global() && all() )"
      selector: k8s-app ends with 'apster' || k8s-app starts with 'kube' || (app == 'vpn' || role == 'db5')
