tests/calico_testcases/example_policies/testcase24-selector-expression/testcase24-scheme.yaml
namespaceList: ../../example_podlist/ns_list_wdc.json
podList: ../../example_podlist/hep_and_wep.json

networkConfigList:
  - name: np_a
    networkPolicyList:
      - testcase24-a.yaml
      - testcase24-profiles.yaml
    expectedWarnings: 0

  - name: np_b
    networkPolicyList:
      - testcase24-b.yaml
      - testcase24-profiles.yaml
    expectedWarnings: 0

  - name: np_c
    networkPolicyList:
      - testcase24-c.yaml
      - testcase24-profiles.yaml
    expectedWarnings: 0

queries:
  - name: policies_not_vacuous
    vacuity:
    - np_a
    - np_b
    - np_c
    expected: 0

  - name: equiv
    equivalence:
    - np_a
    - np_b
    expected: 0

  - name: nonEquiv
    equivalence:
    - np_c
    - np_b
    expected: 1
